:sparkles: testing build for monorepo

--- a/.github/workflows/project-build.yml
+++ b/.github/workflows/project-build.yml
@@ -20,5 +20,5 @@ jobs:
       - name: project build
         run: |
           npm install
-          npm start
-          npm build
+          npm run bootstrap
+          npm run build
