--- a/packages/express/package.json
+++ b/packages/express/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@lunar-lander/apollo",
+  "name": "@lunar-flight/express",
   "version": "0.0.0",
   "author": "Marcin Mazurowski @ _KTW-STUDIO <hello@ktwstudio.com>",
   "description": "@lunar-lander/apollo is monorepo for ...",
