--- a/packages/instruments/package.json
+++ b/packages/instruments/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "@lunar-lander/saturn",
+  "name": "@lunar-flight/instruments",
   "version": "0.0.0",
   "author": "Marcin Mazurowski @ _KTW-STUDIO <hello@ktwstudio.com>",
-  "description": "Omega is one of elements required to create alchemical mixture with your project. It delivers DDD skeleton for Node.js application. Written in Typescript",
-  "homepage": "",
-  "license": "ISC",
+  "description": "@lunar-lander/apollo is monorepo for ...",
+  "homepage": "https://github.com/ktw-studio/lunar-flight#readme",
+  "license": "MIT",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "files": [
@@ -16,29 +16,33 @@
     "build": "tsc -p tsconfig.build.json",
     "test": "NODE_ENV=test jest --config ./jest.config.js",
     "test:watch": "NODE_ENV=test jest --config ./jest.config.js --watch",
-    "lint": "eslint --ext .ts \"src/**/*\"",
+    "lint": "eslint --ignore-path ../../.eslintignore --ext .ts \"src/**/*\"",
     "format": "prettier --config ./../../.prettierrc --write \"src/**/*\"",
     "typecheck": "tsc --noEmit"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick"
+    }
+  },
+  "dependencies": {
+    "reflect-metadata": "^0.1.13"
   },
   "devDependencies": {
     "@types/jest": "^26.0.15",
     "@types/node": "^14.14.10",
+    "@typescript-eslint/eslint-plugin": "^4.7.0",
     "eslint": "^7.13.0",
     "eslint-config-airbnb-typescript": "^12.0.0",
     "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-react": "^7.21.5",
-    "eslint-plugin-react-hooks": "^4.2.0",
     "husky": "^4.3.0",
     "jest": "^26.6.3",
-    "nodemon": "^2.0.7",
+    "nodemon": "^2.0.6",
     "prettier": "^2.1.2",
     "pretty-quick": "^3.1.0",
     "ts-jest": "^26.4.4",
     "ts-node": "^9.0.0",
+    "tsconfig-paths": "^3.9.0",
     "typescript": "^4.0.5"
-  },
-  "dependencies": {
-    "@lunar-lander/apollo": "^0.0.0"
   }
 }
