--- a/.eslintrc
+++ b/.eslintrc
@@ -18,9 +18,7 @@
         "class-methods-use-this": "off",
         "import/no-cycle": "off",
         "@typescript-eslint/indent": "off",
-        "@typescript-eslint/quotes": "off",
-        "max-len": "off",
-        "quotes": [2, "double", { "avoidEscape": false }]
+        "max-len": "off"
       }
     }
   ]
