--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "scripts": {
     "bootstrap": "lerna bootstrap",
     "build": "lerna run build",
+    "lint": "lerna run lint",
+    "lint:fix": "lerna run lint:fix",
     "test": "lerna run test"
   }
 }
