--- a/packages/express/package.json
+++ b/packages/express/package.json
@@ -16,6 +16,7 @@
     "build": "tsc -p tsconfig.build.json",
     "test": "NODE_ENV=test jest --config ./jest.config.js",
     "test:watch": "NODE_ENV=test jest --config ./jest.config.js --watch",
+    "lint:fix": "eslint --fix",
     "lint": "eslint --ignore-path ../../.eslintignore --ext .ts \"src/**/*\"",
     "format": "prettier --config ./../../.prettierrc --write \"src/**/*\"",
     "typecheck": "tsc --noEmit"
