--- a/packages/system/package.json
+++ b/packages/system/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lunar-flight-v/system",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "author": "Marcin Mazurowski @ _KTW-STUDIO <hello@ktwstudio.com>",
   "description": "",
   "homepage": "",
@@ -40,7 +40,8 @@
     "typescript": "^4.0.5"
   },
   "dependencies": {
-    "@lunar-flight-v/command-module": "^0.0.0",
+    "@lunar-flight-v/command-module": "^0.1.0",
     "reflect-metadata": "^0.1.13"
-  }
+  },
+  "gitHead": "d6104e5075fc50c43725cc78afbd39bdff814128"
 }
