--- a/packages/command-module/package.json
+++ b/packages/command-module/package.json
@@ -1,6 +1,9 @@
 {
   "name": "@lunar-flight-v/command-module",
-  "version": "0.1.0",
+  "publishConfig": {
+    "access": "public"
+  },
+  "version": "0.1.1",
   "author": "Marcin Mazurowski @ _KTW-STUDIO <hello@ktwstudio.com>",
   "description": "@lunar-lander/apollo is monorepo for ...",
   "homepage": "",
@@ -46,5 +49,5 @@
     "tsconfig-paths": "^3.9.0",
     "typescript": "^4.0.5"
   },
-  "gitHead": "d6104e5075fc50c43725cc78afbd39bdff814128"
+  "gitHead": "e4c73d3a993559258cee8be2536d551cbf067435"
 }
