--- a/packages/system/package.json
+++ b/packages/system/package.json
@@ -1,6 +1,9 @@
 {
   "name": "@lunar-flight-v/system",
-  "version": "0.1.0",
+  "publishConfig": {
+    "access": "public"
+  },
+  "version": "0.1.1",
   "author": "Marcin Mazurowski @ _KTW-STUDIO <hello@ktwstudio.com>",
   "description": "",
   "homepage": "",
@@ -40,8 +43,8 @@
     "typescript": "^4.0.5"
   },
   "dependencies": {
-    "@lunar-flight-v/command-module": "^0.1.0",
+    "@lunar-flight-v/command-module": "^0.1.1",
     "reflect-metadata": "^0.1.13"
   },
-  "gitHead": "d6104e5075fc50c43725cc78afbd39bdff814128"
+  "gitHead": "e4c73d3a993559258cee8be2536d551cbf067435"
 }
